--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "eslint-plugin-promise": "^5.2.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "@jpbbots/interface": "^2.2.2"
   }
 }
