--- a/typings/package.json
+++ b/typings/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "typings",
+  "name": "@jpbbots/cb-typings",
   "version": "1.0.0",
   "description": "",
-  "main": "api.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JPBBots/censorbot.git"
+  },
+  "author": "JPBBots",
   "license": "ISC",
   "dependencies": {
-    "discord-api-types": "^0.21.0",
-    "yup": "^0.32.9"
+    "discord-api-types": "^0.21.0"
   }
 }
