feat: readd ignored channels/roles

--- a/bot/src/data/DefaultConfig.json
+++ b/bot/src/data/DefaultConfig.json
@@ -25,6 +25,8 @@
     "separate": true,
     "ignored": []
   },
+  "channels": [],
+  "roles": [],
   "exceptions": [],
   "nsfw": true,
   "multi": false,
