feat: ticket admin page
Co-authored-by: MILLION <Million900o@users.noreply.github.com>

--- a/bot/src/data/DefaultConfig.json
+++ b/bot/src/data/DefaultConfig.json
@@ -17,7 +17,8 @@
   "punishments": {
     "expires": null,
     "levels": [],
-    "allow": 63
+    "allow": 63,
+    "log": null
   },
   "webhook": {
     "enabled": false,
