--- a/typings/package.json
+++ b/typings/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@jpbbots/cb-typings",
-  "version": "1.0.6",
+  "version": "1.0.8",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublishOnly": "tsc"
   },
   "repository": {
     "type": "git",
