--- a/typings/.npmrc
+++ b/typings/.npmrc
@@ -1,3 +1,4 @@
 always-auth=true
 registry=https://registry.npmjs.org/
+//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
 @jpbbots:registry=https://npm.pkg.github.com
