--- a/website/package.json
+++ b/website/package.json
@@ -14,8 +14,9 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@jpbberry/typed-emitter": "^1.2.1",
-    "@jpbbots/cb-typings": "^1.0.8",
+    "@jpbbots/cb-typings": "^1.0.11",
     "@jpbbots/censorbot-components": "^3.3.1",
+    "@jpbbots/theme": "^3.5.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/aos": "^3.0.4",
     "aos": "^2.3.4",
@@ -26,6 +27,7 @@
     "jadl": "^0.1.6",
     "next": "^12.0.7",
     "next-images": "^1.8.1",
+    "next-seo": "^5.1.0",
     "react": "^17.0.2",
     "react-animated-numbers": "^0.8.0",
     "react-dom": "17.0.2",
