--- a/typings/package.json
+++ b/typings/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jpbbots/cb-typings",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,9 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JPBBots/censorbot.git"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "author": "JPBBots",
   "license": "ISC",
