feat: start new premium page

--- a/website/package.json
+++ b/website/package.json
@@ -14,12 +14,13 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@jpbberry/typed-emitter": "^1.2.1",
-    "@jpbbots/cb-typings": "^1.0.14",
+    "@jpbbots/cb-typings": "^1.0.16",
     "@jpbbots/censorbot-components": "^3.3.1",
     "@jpbbots/theme": "^3.5.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/aos": "^3.0.4",
     "aos": "^2.3.4",
+    "chroma-js": "^2.4.2",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "fuzzy-search": "^3.2.1",
@@ -48,6 +49,7 @@
     "@babel/core": "^7.15.5",
     "@babel/plugin-proposal-decorators": "^7.15.4",
     "@babel/preset-typescript": "^7.15.0",
+    "@types/chroma-js": "^2.1.3",
     "@types/fuzzy-search": "^2.1.1",
     "@types/humanize-duration": "^3.27.1",
     "@types/react": "17.0.11",
