feat: finish premium trial frontend

--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@jpbberry/typed-emitter": "^1.2.1",
     "@jpbbots/censorbot-components": "^3.3.1",
     "@jpbbots/interface": "^2.2.2",
-    "@jpbbots/theme": "^3.10.1",
+    "@jpbbots/theme": "^3.10.2",
     "@nestjs/common": "^8.4.3",
     "@nestjs/core": "^8.4.3",
     "@nestjs/platform-express": "^8.4.3",
@@ -97,6 +97,7 @@
     "q": "^1.5.1",
     "react": "^17.0.2",
     "react-animated-numbers": "^0.8.0",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
