--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@nestjs/websockets": "^8.4.3",
     "@reduxjs/toolkit": "^1.8.1",
     "@types/aos": "^3.0.4",
+    "@types/react-typist": "^2.0.3",
     "aos": "^2.3.4",
     "chargebee": "^2.10.0",
     "chroma-js": "^2.4.2",
@@ -103,6 +104,7 @@
     "react-redux": "^7.2.8",
     "react-spring": "^9.4.4",
     "react-textarea-autosize": "^8.3.3",
+    "react-typist": "^2.0.5",
     "react-use": "^17.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
