--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "include": ["src/**/*", "src/bot/.run/*.ts"],
-  "exclude": ["src/website"],
+  "exclude": ["src/website", "src/typings"],
   "compilerOptions": {
     "target": "ES2020",
     "outDir": "./dist",
@@ -11,7 +11,6 @@
     "resolveJsonModule": true,
     "strictNullChecks": true,
     "sourceMap": true,
-    "declaration": true,
     "allowJs": true,
     "esModuleInterop": true,
     "baseUrl": "./src"
