--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "include": ["src/**/*", "src/bot/.run/*.ts"],
-  "exclude": ["src/website", "src/typings"],
+  "exclude": ["src/website"],
   "compilerOptions": {
     "target": "ES2020",
     "outDir": "./dist",
