feat(site): admin page

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build-typings": "tsc -p ./typings.tsconfig.json",
     "start": "node .",
     "movetypings": "rimraf ./node_modules/@censorbot/typings && copyfiles ./dist/typings/* ./node_modules/@censorbot/typings --flat",
-    "postinstall": "npm run build-typings && npm run movetypings"
+    "postinstall": "npm run build-typings"
   },
   "repository": {
     "type": "git",
