--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@types/fuzzy-search": "^2.1.2",
     "@types/humanize-duration": "^3.27.1",
     "@types/jest": "^27.4.1",
-    "@types/mongodb": "^3.6.20",
     "@types/node-fetch": "^2.6.1",
     "@types/q": "^1.5.5",
     "@types/react": "^17.0.11",
@@ -60,20 +59,19 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@chakra-ui/layout": "^1.7.8",
-    "@chakra-ui/react": "^1.8.7",
+    "@chakra-ui/react": "^2.4.6",
     "@discordjs/collection": "^0.2.4",
     "@discordjs/rest": "^0.3.0",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@jadl/cmd": "^0.4.3",
     "@jadl/embed": "^0.0.5",
     "@jpbberry/cache": "^1.0.4",
     "@jpbberry/load-routes": "^1.0.3",
     "@jpbberry/typed-emitter": "^1.2.1",
     "@jpbbots/censorbot-components": "^3.3.1",
-    "@jpbbots/interface": "^2.4.0",
-    "@jpbbots/theme": "^3.10.2",
+    "@jpbbots/interface": "^2.5.0",
+    "@jpbbots/theme": "^4.0.0",
     "@nestjs/common": "^8.4.3",
     "@nestjs/core": "^8.4.3",
     "@nestjs/platform-express": "^8.4.3",
@@ -82,7 +80,6 @@
     "@nestjs/websockets": "^8.4.3",
     "@reduxjs/toolkit": "^1.8.1",
     "@types/aos": "^3.0.4",
-    "@types/react-typist": "^2.0.3",
     "aos": "^2.3.4",
     "chargebee": "^2.10.0",
     "chroma-js": "^2.4.2",
@@ -91,27 +88,27 @@
     "dotenv": "^8.6.0",
     "express": "^4.17.3",
     "formik": "^2.2.9",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^6.5.1",
     "fuzzy-search": "^3.2.1",
     "humanize-duration": "^3.27.1",
     "jadl": "^0.2.1",
     "joi": "^17.6.0",
     "module-alias": "^2.2.2",
-    "mongodb": "^3.7.3",
+    "mongodb": "^4.13.0",
     "next": "^12.1.4",
     "next-images": "^1.8.4",
     "next-seo": "^5.3.0",
     "node-fetch": "^2.6.7",
     "q": "^1.5.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-animated-numbers": "^0.8.0",
     "react-countdown": "^2.3.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
     "react-spring": "^9.4.4",
     "react-textarea-autosize": "^8.3.3",
-    "react-typist": "^2.0.5",
+    "react-typist-component": "^1.0.5",
     "react-use": "^17.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
