feat: config package

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://censor.bot",
   "workspaces": [
     "packages/typings",
+    "packages/config",
     "packages/bot",
     "packages/website"
   ],
