--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -6,8 +6,7 @@
     "rootDir": "src",
     "target": "ES2020",
     "moduleResolution": "node",
-    "module": "commonjs",
-    "declaration": true,
+    "module": "CommonJS",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
