--- a/packages/typings/package.json
+++ b/packages/typings/package.json
@@ -1,11 +1,10 @@
 {
     "name": "@censorbot/typings",
     "version": "0.0.1",
-
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
-
     "dependencies": {
-        "discord-api-types": "^0.33.0"
+        "discord-api-types": "^0.33.0",
+        "jadl": "^0.2.1"
     }
 }
