--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -3,33 +3,27 @@
   "version": "13.0.0",
   "main": "./dist/.run/master.js",
   "dependencies": {
-    "@censorbot/typings": "0.0.1",
+    "@censorbot/api": "3.0.0",
     "@censorbot/config": "0.0.1",
+    "@censorbot/database": "0.0.1",
+    "@censorbot/filter": "0.0.1",
+    "@censorbot/typings": "0.0.1",
+    "@censorbot/utils": "0.0.1",
     "@discordjs/collection": "^1.3.0",
     "@jadl/builders": "0.1.3",
-    "@jadl/cmd": "^0.7.5",
+    "@jadl/cmd": "0.7.6",
     "@jpbberry/typed-emitter": "^1.2.1",
     "@jpbbots/interface": "^2.5.0",
-    "@nestjs/common": "^9.2.1",
-    "@nestjs/core": "^9.2.1",
-    "@nestjs/platform-express": "^9.2.1",
-    "@nestjs/platform-socket.io": "^9.2.1",
-    "@nestjs/swagger": "^6.1.4",
-    "@nestjs/websockets": "^9.2.1",
     "@types/q": "^1.5.5",
     "chargebee": "^2.17.0",
     "chargebee-typescript": "^2.15.0",
     "discord-api-types": "0.33.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
     "jadl": "^0.2.1",
     "joi": "^17.7.0",
     "module-alias": "^2.2.2",
     "mongodb": "^4.13.0",
-    "next": "12",
     "q": "^1.5.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0",
     "skia-canvas": "^1.0.1",
     "socket.io": "^4.5.4"
   },
