refactor: update react, redux & component strategies

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -13,14 +13,13 @@
         "@chakra-ui/react": "2.4.6",
         "@emotion/react": "11.10.5",
         "@emotion/styled": "11.10.5",
-        "@jpbbots/censorbot-components": "^3.3.1",
-        "@jpbbots/theme": "^4.0.0",
+        "@jpbbots/theme": "4.1.2",
         "@reduxjs/toolkit": "^1.9.1",
         "chroma-js": "^2.4.2",
         "framer-motion": "6.5.1",
         "fuzzy-search": "^3.2.1",
         "humanize-duration": "^3.27.3",
-        "next": "12",
+        "next": "13.3.1",
         "next-images": "^1.8.4",
         "next-seo": "^5.15.0",
         "react": "18.2.0",
