--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -16,6 +16,7 @@
     "@jpbbots/theme": "4.1.4",
     "@reduxjs/toolkit": "^1.9.1",
     "chroma-js": "^2.4.2",
+    "esbuild-loader": "^3.0.1",
     "framer-motion": "6.5.1",
     "fuzzy-search": "^3.2.1",
     "humanize-duration": "^3.27.3",
